# examples

./: .gitmodules
1_backward_demo/: CMakeLists.txt  README.MD
1_backward_demo/script/: build_main.sh
1_backward_demo/src/: test.cpp
2_cmake_demo/: CMakeLists.txt  README.MD  config.h.in
2_cmake_demo/script/: build_main.sh
2_cmake_demo/utils/: CMakeLists.txt
3_socket_demo/: CMakeLists.txt  README.MD
3_socket_demo/script/: build_main.sh
3_socket_demo/src/: client.c  config.h  server.c
test_demo/: CMakeLists.txt
test_demo/script/: build_main.sh
test_demo/src/: main.cc
test_demo/testlib/: CMakeLists.txt  testlib1.c  testlib1.h  testlib2.c  testlib2.h
test_demo/testlib/sub1/: sub1.c  sub1.h
